# FileStorageService

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  init.sql
.github/workflows/: docker.yml  rust.yml  zap-scan.yml
src/: aes_encryption.rs  file_id.rs  logging.rs  main.rs
src/api/: mod.rs
src/api/files/: handlers.rs  mod.rs  routes.rs  types.rs
src/api/messages/: mod.rs
src/encryption/: aes_encryption.rs  key_generation.rs  mod.rs
src/extractors/: claims.rs
src/fairings/: cors.rs  mod.rs  request_logging.rs
src/messaging/: mod.rs  rabbitmq.rs  rabbitmq_listener.rs
src/middlewares/: mod.rs
src/models/: file_model.rs  mod.rs
src/repository/: file_repository.rs  mod.rs  repository_base.rs
