[package]
name = "lockbox-fs-service"
version = "0.1.0"
edition = "2021"
authors = ["Rik de Goede <rik.dgd@gmail.com>"]
description = "This is the file storage service for the LockBox microservice project."

[dependencies]
rocket = { version = "0.5.1", features = ["json"]}
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
lapin = "2.5.3"

aes-gcm = "0.10.3"
sha2 = "0.10.8"
rand = "0.8.5"
pbkdf2 = "0.12.2"

log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"